awsTemplate_WebSocketMMO.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: awsTutorial(WebSocket MMO part)
Mappings:
  AMIRegionMappings:
    ap-east-1:
      AMI: ami-037ccff828a01334b
    ap-south-1:
      AMI: ami-03b1cf2cce3fd5034
    ap-northeast-1:
      AMI: ami-04169cd7b48907f2b
    ap-northeast-2:
      AMI: ami-0418757705eac8152
    ap-northeast-3:
      AMI: ami-0810d6a3858f4904a
    ap-southeast-1:
      AMI: ami-0fb0f1d61c4d278be
    ap-southeast-2:
      AMI: ami-0de0c0c6a2211377c
    ca-central-1:
      AMI: ami-08761a31519a9bd51
    eu-central-1:
      AMI: ami-036544662caad202e
    eu-west-1:
      AMI: ami-06d9bf8114afaeb36
    eu-west-2:
      AMI: ami-0ce391e0aab33e6a1
    eu-west-3:
      AMI: ami-0e12438fbc843f41b
    eu-north-1:
      AMI: ami-0d8a361b458f59c7b
    me-south-1:
      AMI: ami-0775e1d561de20f92
    sa-east-1:
      AMI: ami-0209c0fb11bf6acca
    us-east-1:
      AMI: ami-036d2d69d66943c88
    us-east-2:
      AMI: ami-00d7169367f5575a5
    us-west-1:
      AMI: ami-053a77de3bf8ae9c6
    us-west-2:
      AMI: ami-01c54b761ff871a8e
Parameters:
  ResourceNamePrefix:
    Description: Prefix of resource name
    Default: awstutorial
    Type: String
  GameServerDeployed:
    Description: is gameserver deployed
    Type: String
    Default: 'false'
    AllowedValues:
      - 'true'
      - 'false'
  GameLiftGameSessionQueueArn:
    Description: GameLift GameSession Queue Arn of the GameLift GameSession Queue which is ued to start matchmaking
    Type: String
  WebSocketMMOEC2InstanceType:
    Description: ec2 instance type of the web socket mmo server
    Type: String
    Default: t4g.nano
  CognitoUserPool:
    Description: Cognito User Pool id of the cognito user pool client which provide
      authentication for graphql api
    Type: String
  CognitoUserPoolClient:
    Description: Cognito User Pool client id of the cognito user pool client which
      provide authentication for graphql api
    Type: String
  JwksUpdateInterval:
    Description: Seconds between two jwks update
    Type: Number
    Default: 3600
  PositionUpdateInterval:
    Description: Seconds between two position update. (Set to 0 to make realtime MMO system)
    Type: Number
    Default: 2
  WeaponUpdateInterval:
    Description: Seconds between two weapon update.
    Type: Number
    Default: 1
  JoinPartyInterval:
    Description: Seconds between two join party interval.
    Type: Number
    Default: 1
  MinSendInvitationRate:
    Description: Seconds between two invitation send. (Set to 0 to make it unlimited)
    Type: Number
    Default: 1
  ManageTeamInterval:
    Description: Seconds between two manage team request. (Set to 0 to make it unlimited)
    Type: Number
    Default: 1
  GetRoomsInterval:
    Description: Seconds between two get rooms request. (Set to 0 to make it unlimited)
    Type: Number
    Default: 5
  GetRoomLimit:
    Description: how many get room request can be sent in a period
    Type: Number
    Default: 30
  GetRoomLimitPeriod:
    Description: how long get room request period
    Type: Number
    Default: 1
  GroupOperationLimit:
    Description: how many join / leave group request can be sent in a period
    Type: Number
    Default: 30
  GroupOperationLimitPeriod:
    Description: how long join / leave group request period
    Type: Number
    Default: 1
  P2PInfoTransferLimit:
    Description: how many submit local description / candidate request can be sent in a period
    Type: Number
    Default: 300
  P2PInfoTransferLimitPeriod:
    Description: how long submit local description / candidate request period
    Type: Number
    Default: 1
  JoinRoomLimit:
    Description: how many join room request can be sent in a period
    Type: Number
    Default: 100
  JoinRoomLimitPeriod:
    Description: how long join room request period
    Type: Number
    Default: 1
  LeaveRoomLimit:
    Description: how many leave room request can be sent in a period
    Type: Number
    Default: 100
  LeaveRoomLimitPeriod:
    Description: how long leave room request period
    Type: Number
    Default: 1
  InvitationExpire:
    Description: Seconds between a invitation expired.
    Type: Number
    Default: 15
  PartyMaximumRoomNumber:
    Description: how many clients can join a party at the same time.
    Type: Number
    Default: 4
  PrivatePartyMaximumRoomNumber:
    Description: how many clients can join a private party at the same time.
    Type: Number
    Default: 16
  ManagerShardNumber:
    Description: the number of room and party manager shard. (should be equal to the number of vcpu to get best performance)
    Type: Number
    Default: 16
  PrivatePartyPasscodeRefillThreshold:
    Description: when the number of available passcode in a private party is less than this value, the passcode will be refilled.
    Type: Number
    Default: 16
  PrivatePartyPasscodeRefillSize:
    Description: the number of passcode will be refilled when the number of available passcode in a private party is less than PrivatePartyPasscodeRefillThreshold.
    Type: Number
    Default: 5000
  PrivatePartyPasscodeLength:
    Description: the length of passcode in a private party.
    Type: Number
    Default: 8
  GameSessionMaximumPlayerSessionCount:
    Description: the maximum number of player session in a game session of private party.
    Type: Number
    Default: 8
  GameSessionQueueName:
    Description: the name of game session queue.
    Type: String
  GameSessionPlacementQueryInterval:
    Description: the interval between two game session placement query.
    Type: Number
    Default: 5
  TeamAssignmentTableName:
    Description: the name of team assignment table.
    Type: String
    Default: 'awsTutorial_Matchmaking_MatchTeamAssignment_DynamoDB_Table'
  TeamAssignmentTableArn:
    Description: the arn of team assignment table.
    Type: String
  WeaponIndex:
    Description: the index name of weapon result index in dynamodb table.
    Type: String
    Default: 'byWeaponResult'
  MatchmakingConfiguration:
    Description: the name of matchmaking configuration.
    Type: String
    Default: 'awsTutorial-Matchmaking-Configuration'
  WeaponRateUpdateInterval:
    Description: the interval between two weapon rate update.
    Type: Number
    Default: 600
  StartGameSemaphoreNumber:
    Description: the number of start game calls can be executed at the same time.
    Type: Number
    Default: 200
  StartGameMatchmakingGateRangeMin:
    Description: the minimal number of start matchmaking calls should be there before sending the actual call
    Type: Number
    Default: 1
  StartGameMatchmakingGateRangeMax:
    Description: the number of start game calls can be executed at the same time. (-1 means unlimited)
    Type: Number
    Default: -1
  PartyBackupTime:
    Description: how long the party info will be kept before delete so that players can rejoin the party.
    Type: Number
    Default: 90
  SendRequestSizeThreshold:
    Description: how long the send request queue size should be kept before dropping
    Type: Number
    Default: 20
  DefaultWeaponId:
    Description: the default weapon id
    Type: String
    Default: 'dbc067bd-1cb0-4545-beee-eb070d9cf23f'
Conditions:
  GameServerDeployed: !Equals
    - !Ref GameServerDeployed
    - 'true'
Resources:
  awsTutorialWebSocketMMOEC2VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOEC2Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: false
      VpcId: !Ref awsTutorialWebSocketMMOEC2VPC
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOEC2InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOEC2VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref awsTutorialWebSocketMMOEC2InternetGateway
      VpcId: !Ref awsTutorialWebSocketMMOEC2VPC
  awsTutorialWebSocketMMOEC2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref awsTutorialWebSocketMMOEC2VPC
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOEC2Route:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref awsTutorialWebSocketMMOEC2InternetGateway
      RouteTableId: !Ref awsTutorialWebSocketMMOEC2RouteTable
  awsTutorialWebSocketMMOEC2SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref awsTutorialWebSocketMMOEC2RouteTable
      SubnetId: !Ref awsTutorialWebSocketMMOEC2Subnet
  awsTutorialWebSocketMMOEC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join
        - ''
        - - !Ref ResourceNamePrefix
          - _WebSocket_MMO_EC2_Instance_SG
      GroupDescription: Security Group for WebSocket MMO Server
      VpcId: !Ref awsTutorialWebSocketMMOEC2VPC
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSOcketMMOEC2InstanceSecurityGroupIngressFromELB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from ELB
      GroupId: !Ref awsTutorialWebSocketMMOEC2InstanceSecurityGroup
      IpProtocol: tcp
      FromPort: 8000
      ToPort: 8000
      SourceSecurityGroupId: !Ref awsTutorialWebSocketMMOELBSecurityGroup
  awsTutorialWebSOcketMMOEC2InstanceSecurityGroupEmbeddedVoiceChatStunTCPIngressFromELB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Embedded Voice Chat Stun TCP Ingress from ELB
      GroupId: !Ref awsTutorialWebSocketMMOEC2InstanceSecurityGroup
      IpProtocol: tcp
      FromPort: 19302
      ToPort: 19302
      CidrIp: 0.0.0.0/0
  awsTutorialWebSOcketMMOEC2InstanceSecurityGroupEmbeddedVoiceChatStunUDPIngressFromELB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Embedded Voice Chat Stun UDP Ingress from ELB
      GroupId: !Ref awsTutorialWebSocketMMOEC2InstanceSecurityGroup
      IpProtocol: udp
      FromPort: 19302
      ToPort: 19302
      CidrIp: 0.0.0.0/0
  awsTutorialWebSOcketMMOEC2InstanceSecurityGroupEmbeddedVoiceChatTurnTCPIngressFromELB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Embedded Voice Chat Turn TCP Ingress from ELB
      GroupId: !Ref awsTutorialWebSocketMMOEC2InstanceSecurityGroup
      IpProtocol: tcp
      FromPort: 49152
      ToPort: 60000
      CidrIp: 0.0.0.0/0
  awsTutorialWebSOcketMMOEC2InstanceSecurityGroupEmbeddedVoiceChatTurnUDPIngressFromELB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Embedded Voice Chat Turn UDP Ingress from ELB
      GroupId: !Ref awsTutorialWebSocketMMOEC2InstanceSecurityGroup
      IpProtocol: udp
      FromPort: 49152
      ToPort: 60000
      CidrIp: 0.0.0.0/0
  awsTutorialWebSocketMMORole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join
        - ''
        - - !Ref ResourceNamePrefix
          - _WebSocket_MMO_IAM_Role
      Description: Role for ws mmo to access dynamodb table and gamelift
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: !Join
            - ''
            - - !Ref ResourceNamePrefix
              - _GetWeaponRate_Policy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Sid: GetWeaponRatePolicy
                Effect: Allow
                Action:
                  - dynamodb:PartiQLSelect
                Resource: !If
                  - GameServerDeployed
                  -
                    - !Ref TeamAssignmentTableArn
                    - !Join
                      - ''
                      - - !Ref TeamAssignmentTableArn
                        - '.'
                        - !Ref WeaponIndex
                  -
                    - '*'
              - Sid: GameLiftMatchmakingPolicy
                Effect: Allow
                Action:
                  - gamelift:StopMatchmaking
                  - gamelift:DescribeMatchmaking
                  - gamelift:StartMatchmaking
                Resource:
                  - '*'
              - Sid: GameLiftQueuePolicy
                Effect: Allow
                Action:
                  - gamelift:StopGameSessionPlacement
                  - gamelift:DescribeGameSessionPlacement
                Resource:
                  - '*'
              - Sid: GameLiftQueuePolicy2
                Effect: Allow
                Action:
                  - gamelift:StartGameSessionPlacement
                Resource: !If
                  - GameServerDeployed
                  -
                    - !Ref GameLiftGameSessionQueueArn
                  -
                    - '*'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOIAMInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: !Join
        - ''
        - - !Ref ResourceNamePrefix
          - _WebSocket_MMO_IAM_InstanceProfile
      Path: '/'
      Roles:
        - !Ref awsTutorialWebSocketMMORole
  awsTutorialWebSocketMMOEC2LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Join
        - ''
        - - !Ref ResourceNamePrefix
          - _WebSocket_MMO_EC2_LaunchTemplate
      LaunchTemplateData:
#        InstanceMarketOptions:
#          MarketType: capacity-block
#          SpotOptions:
#            InstanceInterruptionBehavior: stop
#            SpotInstanceType: persistent
        InstanceType: !Ref WebSocketMMOEC2InstanceType
        IamInstanceProfile:
          Arn: !GetAtt awsTutorialWebSocketMMOIAMInstanceProfile.Arn
        ImageId: !FindInMap
          - AMIRegionMappings
          - !Ref AWS::Region
          - AMI
#        {
#          "jwks_update_interval": 3600,
#          "position_update_interval": 5,
#          "region": "ap-northeast-2",
#          "user_pool_id": "ap-northeast-2_sFGUdVUA0",
#          "app_client_id": "53jlnqcef0oc7lf8pmd2ov4fve",
#          "min_send_invitation_rate": 1,
#          "invitation_expire": 15,
#          "party_maximum_room_number": 4,
#          "private_party_maximum_room_number": 16,
#          "manager_shard_number": 4,
#          "private_party_passcode_refill_threshold": 16,
#          "private_party_passcode_refill_size": 5000,
#          "private_party_passcode_length": 8,
#          "game_session_maximum_player_session_count": 8,
#          "game_session_queue_name": "",
#          "game_session_placement_query_interval": 5,
#          "team_assignment_table_name": "",
#          "weapon_index": "",
#          "matchmaking_configuration": "",
#          "weapon_rate_update_interval": 600,
#          "start_game_semaphore_number": 200,
#          "start_game_matchmaking_gate_range_min": 1,
#          "start_game_matchmaking_gate_range_max": -1,
#          "party_backup_time": 90,
#          "send_requests_size_threshold": 20,
#          "default_weapon_id": "dbc067bd-1cb0-4545-beee-eb070d9cf23f"
#        }
        UserData: !Base64
          Fn::Sub: |
            {
              "jwks_update_interval": ${JwksUpdateInterval},
              "position_update_interval": ${PositionUpdateInterval},
              "weapon_update_interval": ${WeaponUpdateInterval},
              "join_party_interval": ${JoinPartyInterval},
              "min_send_invitation_rate": ${MinSendInvitationRate},
              "manage_team_interval": ${ManageTeamInterval},
              "get_rooms_interval": ${GetRoomsInterval},
              "join_room_limit": ${JoinRoomLimit},
              "join_room_limit_period": ${JoinRoomLimitPeriod},
              "leave_room_limit": ${LeaveRoomLimit},
              "leave_room_limit_period": ${LeaveRoomLimitPeriod},
              "get_room_limit": ${GetRoomLimit},
              "get_room_limit_period": ${GetRoomLimitPeriod},
              "group_operation_limit": ${GroupOperationLimit},
              "group_operation_limit_period": ${GroupOperationLimitPeriod},
              "p2p_info_transfer_limit": ${P2PInfoTransferLimit},
              "p2p_info_transfer_limit_period": ${P2PInfoTransferLimitPeriod},
              "region": "${AWS::Region}",
              "user_pool_id": "${CognitoUserPool}",
              "app_client_id": "${CognitoUserPoolClient}",
              "invitation_expire": ${InvitationExpire},
              "party_maximum_room_number": ${PartyMaximumRoomNumber},
              "private_party_maximum_room_number": ${PrivatePartyMaximumRoomNumber},
              "manager_shard_number": ${ManagerShardNumber},
              "private_party_passcode_refill_threshold": ${PrivatePartyPasscodeRefillThreshold},
              "private_party_passcode_refill_size": ${PrivatePartyPasscodeRefillSize},
              "private_party_passcode_length": ${PrivatePartyPasscodeLength},
              "game_session_maximum_player_session_count": ${GameSessionMaximumPlayerSessionCount},
              "game_session_queue_name": "${GameSessionQueueName}",
              "game_session_placement_query_interval": ${GameSessionPlacementQueryInterval},
              "team_assignment_table_name": "${TeamAssignmentTableName}",
              "weapon_index": "${WeaponIndex}",
              "matchmaking_configuration": "${MatchmakingConfiguration}",
              "weapon_rate_update_interval": ${WeaponRateUpdateInterval},
              "start_game_semaphore_number": ${StartGameSemaphoreNumber},
              "start_game_matchmaking_gate_range_min": ${StartGameMatchmakingGateRangeMin},
              "start_game_matchmaking_gate_range_max": ${StartGameMatchmakingGateRangeMax},
              "party_backup_time": ${PartyBackupTime},
              "send_requests_size_threshold": ${SendRequestSizeThreshold},
              "default_weapon_id": "${DefaultWeaponId}"
            }
        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: Usage
                Value: Youtube Streamer
          - ResourceType: volume
            Tags:
              - Key: Usage
                Value: Youtube Streamer
          - ResourceType: network-interface
            Tags:
              - Key: Usage
                Value: Youtube Streamer
#          - ResourceType: spot-instances-request
#            Tags:
#              - Key: Usage
#                Value: Youtube Streamer
  awsTutorialWebSocketMMOEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref awsTutorialWebSocketMMOEC2LaunchTemplate
        Version: !GetAtt awsTutorialWebSocketMMOEC2LaunchTemplate.DefaultVersionNumber
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeleteOnTermination: true
          DeviceIndex: '0'
          GroupSet:
            - !Ref awsTutorialWebSocketMMOEC2InstanceSecurityGroup
          SubnetId: !Ref awsTutorialWebSocketMMOEC2Subnet
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join
        - ''
        - - !Ref ResourceNamePrefix
          - _WebSocket_MMO_ELB_SG
      GroupDescription: Security Group for WebSocket MMO Server
      VpcId: !Ref awsTutorialWebSocketMMOEC2VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.88.0/21
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.239.134.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.82.134.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.86.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.140.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.0.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.239.204.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.160.0/19
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 70.132.0.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 15.158.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.136.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.239.170.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.46.0.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.96.0/19
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.184.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 204.246.166.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.64.0/21
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.172.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 205.251.218.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.46.4.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.144.0/20
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.176.0/21
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.78.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.248.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 64.252.128.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.154.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 64.252.64.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.144.0/21
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.224.0/21
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.128.0/21
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.46.32.0/19
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 3.172.64.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.82.128.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 18.68.0.0/16
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.156.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.160.0/21
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.240.0/21
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.192.0/19
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.76.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 52.46.16.0/20
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.239.208.0/21
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.188.0/23
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 3.172.0.0/18
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.80.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 54.182.128.0/20
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 130.176.72.0/22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 13.124.199.0/24
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 3.29.57.0/26
        - IpProtocol: tcp
          FromPort: 19302
          ToPort: 19302
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 49152
          ToPort: 60000
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 19302
          ToPort: 19302
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: 49152
          ToPort: 60000
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOELB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Join
        - ''
        - - !Ref ResourceNamePrefix
          - '-WebSocket-MMO-ELB'
      Type: network
      Scheme: internet-facing
      Subnets:
        - !Ref awsTutorialWebSocketMMOEC2Subnet
      SecurityGroups:
        - !Ref awsTutorialWebSocketMMOELBSecurityGroup
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOELBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Join
        - ''
        - - !Ref ResourceNamePrefix
          - '-WebSocket-MMO-ELB-TG'
      HealthCheckPath: /health
      HealthCheckPort: 8000
      HealthCheckProtocol: HTTP
      Protocol: TCP
      Port: 8000
      VpcId: !Ref awsTutorialWebSocketMMOEC2VPC
      TargetType: instance
      Targets:
        - Id: !Ref awsTutorialWebSocketMMOEC2Instance
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOELBEmbeddedVoiceChatStunTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Join
        - ''
        - - !Ref ResourceNamePrefix
          - '-EBVC-Stun-ELB-TG'
      HealthCheckPath: /health
      HealthCheckPort: 8000
      HealthCheckProtocol: HTTP
      Protocol: TCP_UDP
      Port: 19302
      VpcId: !Ref awsTutorialWebSocketMMOEC2VPC
      TargetType: instance
      Targets:
        - Id: !Ref awsTutorialWebSocketMMOEC2Instance
      Tags:
        - Key: Usage
          Value: Youtube Streamer
  awsTutorialWebSocketMMOELBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref awsTutorialWebSocketMMOELB
      Protocol: TCP
      Port: 80
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref awsTutorialWebSocketMMOELBTargetGroup
  awsTutorialWebSocketMMOELBEmbeddedVoiceChatStunListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref awsTutorialWebSocketMMOELB
      Protocol: TCP_UDP
      Port: 19302
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref awsTutorialWebSocketMMOELBEmbeddedVoiceChatStunTargetGroup
  awsTutorialWebSocketMMOCloudFrontDistribution:
    Type: AWS::CloudFront::Distribution
    Properties:
      DistributionConfig:
        DefaultCacheBehavior:
          TargetOriginId: !Join
            - ''
            - - !Ref ResourceNamePrefix
              - _WebSocket_MMO_CLoudFront_Distribution_ELB_Origin
          AllowedMethods:
            - GET
            - HEAD
            - OPTIONS
            - PUT
            - PATCH
            - POST # For WebSocket
            - DELETE
          CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad # caching disabled
          ForwardedValues:
            Headers:
              - Authorization
              - Sec-WebSocket-Key
              - Sec-WebSocket-Version
              - Sec-WebSocket-Extensions
              - Sec-WebSocket-Accept
              - Sec-WebSocket-Protocol
              - Sec-WebSocket-Server
            QueryString: true
          OriginRequestPolicyId: 216adef6-5c7f-47e4-b989-5492eafa07d3 # all viewer
          ViewerProtocolPolicy: redirect-to-https
        Enabled: true
        HttpVersion: http2and3
        Origins:
          - Id: !Join
              - ''
              - - !Ref ResourceNamePrefix
                - _WebSocket_MMO_CLoudFront_Distribution_ELB_Origin
            DomainName: !GetAtt awsTutorialWebSocketMMOELB.DNSName
            CustomOriginConfig:
              HTTPPort: 80
              OriginProtocolPolicy: http-only
        ViewerCertificate:
          CloudFrontDefaultCertificate: true
      Tags:
        - Key: Usage
          Value: Youtube Streamer
Outputs:
  awsTutorialWebSocketMMODNSName:
    Description: The DNSName of the WebSocket MMO Server
    Value: !GetAtt awsTutorialWebSocketMMOCloudFrontDistribution.DomainName
    Export:
      Name: !Sub awsTutorialWebSocketMMODNSName
  awsTutorialEmbeddedVoiceChatIpAddress:
    Description: The ip address of the Embedded Voice Chat Stun Server
    Value: !GetAtt awsTutorialWebSocketMMOEC2Instance.PublicIp
    Export:
      Name: !Sub awsTutorialEmbeddedVoiceChatIpAddress
